docs(README): 更新项目文档并完善技术栈和服务架构说明
- 添加了完整的技术栈表格，包含语言、框架、数据库、缓存等详细信息
- 补充了服务架构图和各微服务的端口、路由前缀、职责说明
- 新增了核心模块介绍，说明了 common、api、auth-resource-sdk 的作用
- 添加了快速开始指南，包括环境依赖、构建命令、启动步骤
- 补充了管理员登录信息和 Nacos 配置说明
- 更新了在线笔记链接
- 同步更新了项目记忆文件中的 README 访问记录